manipulando elementos com classlist

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
     <br><br>
 
+    <button id="btnTrocar" onclick="trocar()" class="preto">Trocar cor do botão</button>
+
+    <br><br>
+
     <script src="script.js"></script>
 </body>
 </html>
