--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
 
     <br><br>
 
+    <img src="img/capivara.jpg" class="animal">
+    <br><br>
+    <button onclick="trocaAimal('gato')">Vira um gato</button>
+    <button onclick="trocaAimal('capivara')">Vira uma capivara</button>
+
+    <br><br>
+
     <script src="script.js"></script>
 </body>
 </html>
