--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
     <br><br>
 
+    <div class="scrollButton" onclick="subirTela()"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
