Timers e template string

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 
     <br><br>
 
+    <button onclick="comecar()">Começar</button>
+    <button onclick="parar()">Parar</button>
+    <button onclick="rodar()">Pop-Up em 2 segundos</button>
+    <br/>
+    <div class="timer"></div>
+
     <div class="scrollButton" onclick="subirTela()"></div>
 
     <script src="script.js"></script>
