Fazendo requisições - parte 1

--- a/index.html
+++ b/index.html
@@ -41,8 +41,17 @@
     <br/>
     <div class="timer"></div>
 
+    <br/><br/>
+
+    <button onclick="carregarPosts()">Carregar Posts</button>
+    <br/>
+    <div id="posts"></div>
+
+    <br/><br/>
+
     <div class="scrollButton" onclick="subirTela()"></div>
 
     <script src="script.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
