Requisição para inclusão de posts

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
     <br/><br/>
 
+    <button onclick="inserirPosts()">Inserir Posts</button>
+    <br/>
     <button onclick="carregarPosts()">Carregar Posts</button>
     <br/>
     <div id="posts"></div>
