Upload de imagem com pré-visualização

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
     <button onclick="carregarPosts()">Carregar Posts</button>
     <br/>
     <div id="posts"></div>
+    <br/>
+
+    <input type="file" id="arquivo" onclick="enviar()"> <button>Enviar</button>
+    <br/>
+    <input type="file" accept="image/*" id="imagem"> <button onclick="mostrarImagem()">Mostrar Imagem</button>
+
+    <div id="areaImagem"></div>
 
     <br/><br/>
 
