Criando ação do botão fechar

--- a/pizza/index.html
+++ b/pizza/index.html
@@ -59,7 +59,7 @@
     </aside>
     <div class="pizzaWindowArea">
         <div class="pizzaWindowBody">
-            <div class="pizzaInfo--cancelMobileButton">Voltar</div>
+            <div onclick="closeModal()" class="pizzaInfo--cancelMobileButton">Voltar</div>
             <div class="pizzaBig">
                 <img src="" />
             </div>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="pizzaInfo--addButton">Adicionar ao carrinho</div>
-                <div class="pizzaInfo--cancelButton">Cancelar</div>
+                <div onclick="closeModal()" class="pizzaInfo--cancelButton">Cancelar</div>
             </div>
         </div>
     </div>
